--- a/assigment/16415 - GbyG/html/Gby_Email_percent_purchase_Template_V3_16415(newheader-footer).html
+++ b/assigment/16415 - GbyG/html/Gby_Email_percent_purchase_Template_V3_16415(newheader-footer).html
@@ -121,21 +121,19 @@
             </table>
 <! ----- End of HEADER ----- !>
 <!-- begin CONTENT -->
-            <table border="0" bordercolor="#000000" class="row" style="border-top-style: solid; border-top-width: 1px; border-top-color: #000000;  box-sizing: border-box;border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block; background-color: #e5ddd9">
+            <table style="border-top-style: solid; border-top-width: 1px; border-top-color: #000000; width:100%; display:block; background-color: #e5ddd9">
               <tbody style="display:block;">
-                <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;display:block;">
-                  <td border="0" class="wrapper last" style="display: block; word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;border:none; display: block;">
+                <tr style="display:block;">
+                  <td style="display: block;">
 <!-- Begin content inside containing table -->
-                    <table class="row" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;" >
+                    <table style="width:100%">
                       <tbody style="display:block;">
-                        <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;display:block;" >
-                          <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px;" >
-                            <table class="twelve columns center" style="border-spacing:0;border-collapse:collapse;padding-top:10px;padding-bottom:10px;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:552px;">
-                              <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
-                                <td class="pretitle twelve sub-columns center last text-resize-one" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:21px;line-height:12px;padding-top:55px;padding-bottom:30px;padding-right:0;padding-left:0;font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif; letter-spacing: .25em; text-align:center;min-width:0px;width:100%;">
+                        <tr style="display:block;">
+                          <td style="display: block">
+                            <table style="padding-top:10px; padding-bottom:10px; width:100%">
+                              <tr style="display: block">
+                                <td style="display: block; font-size:21px; line-height:12px; padding-top:55px; padding-bottom:30px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif; letter-spacing: .25em; text-align:center; width:100%;">
                                   LIMITED TIME ONLY
-                                </td>
-                                <td class="expander" style="word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;visibility:hidden;width:0px;padding-top:0 !important;padding-bottom:0 !important;padding-right:0 !important;padding-left:0 !important;">
                                 </td>
                               </tr>
                             </table>
@@ -143,17 +141,16 @@
                         </tr>
                       </tbody>
                     </table>
-                    <table class="row" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;" >
-                      <tbody style="display:block;">
-                        <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display:block;">
-                          <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px; display: block;">
-                            <table class="twelve columns center" style="border-spacing:0;border-collapse:collapse;padding-top:10px;padding-bottom:10px;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:552px;">
-                              <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;">
-                                <td class="title twelve sub-columns center text-resize-two" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:144px;line-height:90%;padding-top:0px;padding-bottom:10px;padding-right:0;padding-left:0;font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;font-weight:600;text-align:center;text-transform:uppercase;min-width:0px;width:100%;color:#000000;">
+                    <table style="width:100%">
+                      <tbody style="display:block">
+                        <tr style="display:block">
+                          <td style="display: block">
+                            <table style="padding-top:10px; padding-bottom:10px; width:100%;">
+                              <tr style="display: block">
+                                <td style="display: block; font-size:144px; line-height:90%; padding-bottom:10px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif; font-weight:600; text-align:center; width:100%; color:#000000;">
                                   XX<span style="font-family:Helvetica, Arial, sans-serif;">%</span><br/>
-                                  <span style="font-weight: normal;"> Off</span>
+                                  <span style="font-weight: normal;"> OFF</span>
                                 </td>
-                                <td class="expander" style="word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;visibility:hidden;width:0px;padding-top:0 !important;padding-bottom:0 !important;padding-right:0 !important;padding-left:0 !important;"></td>
                               </tr>
                             </table>
                           </td>
@@ -177,16 +174,15 @@
                         </tr>
                       </tbody>
                     </table>
-                    <table class="row" style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:left;padding-top:0px;padding-bottom:0px;padding-right:0px;padding-left:0px;width:100%;position:relative;display:block;" >
+                    <table style="width:100%">
                       <tbody style="display:block;">
-                        <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;display:block;" >
-                          <td class="wrapper last" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;padding-top:0px;padding-bottom:0px;padding-left:0px;position:relative;padding-right:0px; display: block;" >
-                            <table class="twelve columns center" style="border-spacing:0;border-collapse:collapse;padding-top:10px;padding-bottom:10px;padding-right:0;padding-left:0;vertical-align:top;text-align:left;margin-top:0;margin-bottom:0;margin-right:auto;margin-left:auto;width:552px;">
-                              <tr style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;vertical-align:top;text-align:left;" >
-                                <td class="subtitle twelve sub-columns center last text-resize-three" style="word-break:break-word;-webkit-hyphens:none;-moz-hyphens:none;hyphens:none;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;font-size:31px;line-height:12px;padding-top:0px;padding-bottom:80px;padding-right:0;padding-left:0;font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;font-weight:400;text-align:center;text-transform:uppercase;letter-spacing:.2em; min-width:0px;width:100%;">
+                        <tr style="display:block;">
+                          <td style="display: block" >
+                            <table style="padding-top:10px; padding-bottom:10px; width:100%;">
+                              <tr style="display: block;">
+                                <td style="display: block; font-size:31px; line-height:12px; padding-bottom:80px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif; font-weight:400; text-align:center; letter-spacing:.2em; width:100%;">
                                   Your Purchase
                                 </td>
-                                <td class="expander" style="word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;border-collapse:collapse !important;vertical-align:top;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;text-align:left;font-size:9px;line-height:12px;visibility:hidden;width:0px;padding-top:0 !important;padding-bottom:0 !important;padding-right:0 !important;padding-left:0 !important;"></td>
                               </tr>
                             </table>
                           </td>
